--- a/writeup/flagg_references.bib
+++ b/writeup/flagg_references.bib
@@ -136,7 +136,7 @@
 },
 
 @booklet{nephelena,
-  author = {{Neptune and Company, Inc.}},
+  author = {{Neptune and Company, Inc.\@}},
   title = {Helena Valley Probabilistic Risk Assessment of MEC for the Montana Army National Guard},
   year = {2008}
 },
